Add templates, env support, and new utility scripts
- Move inline YAML to template files (gpu-machineset, icsp, root-app)
- Add .env support for credentials and configuration options
- Simplify Makefile by moving logic to scripts
- Add GPU configuration options (instance type, replicas, az, access type)
- Add GitOps configuration options (repo URL, branch)
- Add new scripts: status.sh, validate.sh, configure-repo.sh
- Use envsubst for template variable substitution

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,22 @@
 # Copy this file to .env and fill in your values
 # .env is gitignored and will not be committed
 
+# =============================================================================
 # Quay.io credentials for RHOAI nightly images
+# =============================================================================
 QUAY_USER=
-QUAY_TOKEN=your_token_here
+QUAY_TOKEN=
+
+# =============================================================================
+# GPU MachineSet Configuration (optional - defaults shown)
+# =============================================================================
+# GPU_INSTANCE_TYPE=g5.2xlarge
+# GPU_REPLICAS=1
+# GPU_ACCESS_TYPE=SHARED
+# GPU_AZ=
+
+# =============================================================================
+# GitOps Configuration (optional - for forks/testing)
+# =============================================================================
+# GITOPS_REPO_URL=https://github.com/cfchase/rhoai-nightly
+# GITOPS_BRANCH=main
