Add GPU HardwareProfile
Creates gpu-profile with:
- CPU: min 1 (default 1)
- Memory: min 1Gi (default 12Gi)
- GPU: min 1 nvidia.com/gpu (default 1)

No max limits - users can request what they need.

--- a/components/instances/rhoai-instance/base/kustomization.yaml
+++ b/components/instances/rhoai-instance/base/kustomization.yaml
@@ -8,3 +8,4 @@ resources:
   - datasciencecluster.yaml
   - odh-dashboard-config.yaml
   - notebook-controller-culler-config-cm.yaml
+  - hardwareprofile-gpu.yaml
