Add CPU worker MachineSet for dedicated compute nodes
- Creates dedicated CPU worker nodes separate from master/infra
- Default: m5.2xlarge with 2 replicas
- Labels nodes with node-role.kubernetes.io/cpu-worker
- Configurable via CPU_INSTANCE_TYPE, CPU_REPLICAS in .env

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,15 @@ QUAY_TOKEN=
 # GPU_AZ=
 
 # =============================================================================
+# CPU Worker MachineSet Configuration (optional - defaults shown)
+# Creates dedicated CPU worker nodes separate from master/infra
+# =============================================================================
+# CPU_INSTANCE_TYPE=m5.4xlarge
+# CPU_REPLICAS=1
+# CPU_AZ=
+# CPU_VOLUME_SIZE=120
+
+# =============================================================================
 # GitOps Configuration (optional - for forks/testing)
 # =============================================================================
 # GITOPS_REPO_URL=https://github.com/cfchase/rhoai-nightly
