Add MachineSet scaling and autoscaling support
- Add scale-machineset.sh for manual scaling by name
- Add make scale target
- Add make refresh target to force pull latest nightly images
- Enable autoscaling by default (min=1, max=3) for GPU and CPU MachineSets
- Update scripts to be idempotent (update existing resources instead of skip)
- Reorder setup: pull-secret + icsp before gpu + cpu
- Make 'make' default to 'make all' for full bootstrap

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,8 @@ QUAY_TOKEN=
 # GPU_REPLICAS=1
 # GPU_ACCESS_TYPE=SHARED
 # GPU_AZ=
+# GPU_MIN=1
+# GPU_MAX=3
 
 # =============================================================================
 # CPU Worker MachineSet Configuration (optional - defaults shown)
@@ -23,6 +25,8 @@ QUAY_TOKEN=
 # CPU_REPLICAS=1
 # CPU_AZ=
 # CPU_VOLUME_SIZE=120
+# CPU_MIN=1
+# CPU_MAX=3
 
 # =============================================================================
 # GitOps Configuration (optional - for forks/testing)
