--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ QUAY_TOKEN=
 
 # =============================================================================
 # GPU MachineSet Configuration (optional - defaults shown)
+# Autoscaling: MIN/MAX control cluster autoscaler, replicas starts at MIN
 # =============================================================================
 # GPU_INSTANCE_TYPE=g5.2xlarge
-# GPU_REPLICAS=1
 # GPU_ACCESS_TYPE=SHARED
 # GPU_AZ=
 # GPU_MIN=1
@@ -20,9 +20,9 @@ QUAY_TOKEN=
 # =============================================================================
 # CPU Worker MachineSet Configuration (optional - defaults shown)
 # Creates dedicated CPU worker nodes separate from master/infra
+# Autoscaling: MIN/MAX control cluster autoscaler, replicas starts at MIN
 # =============================================================================
 # CPU_INSTANCE_TYPE=m6a.4xlarge
-# CPU_REPLICAS=1
 # CPU_AZ=
 # CPU_VOLUME_SIZE=120
 # CPU_MIN=1
