Fix SM3: set Automatic + ignore installPlanApproval drift
- Set installPlanApproval to Automatic in git
- Add ignoreDifferences to ApplicationSet to ignore OLM overwriting this field
- This prevents ArgoCD from constantly showing OutOfSync

--- a/components/argocd/apps/cluster-operators-appset.yaml
+++ b/components/argocd/apps/cluster-operators-appset.yaml
@@ -19,6 +19,11 @@ spec:
     spec:
       project: default
       syncPolicy: {}
+      ignoreDifferences:
+        - group: operators.coreos.com
+          kind: Subscription
+          jsonPointers:
+            - /spec/installPlanApproval
       source:
         repoURL: https://github.com/cfchase/rhoai-nightly
         targetRevision: main
