Enable Model Catalog UI and data sources
- Add disableModelCatalog: false to OdhDashboardConfig
- Add model-catalog-sources ConfigMap to enable Red Hat AI catalog sources
- RHOAI 3.2 disabled catalog sources by default (see .tmp/issues/model-catalog-issue-analysis.md)

--- a/components/instances/rhoai-instance/base/kustomization.yaml
+++ b/components/instances/rhoai-instance/base/kustomization.yaml
@@ -9,3 +9,4 @@ resources:
   - odh-dashboard-config.yaml
   - notebook-controller-culler-config-cm.yaml
   - hardwareprofile-gpu.yaml
+  - model-catalog-sources.yaml
