--- a/components/instances/nvidia-instance/base/cluster-policy.yaml
+++ b/components/instances/nvidia-instance/base/cluster-policy.yaml
@@ -31,6 +31,10 @@ spec:
     default: false
     enabled: true
   driver:
+    # Pin driver version for stability
+    version: "580.95.05"
+    repository: "nvcr.io/nvidia"
+    image: "driver"
     licensingConfig:
       nlsEnabled: true
       secretName: ''
