--- a/components/operators/nvidia-operator/kustomization.yaml
+++ b/components/operators/nvidia-operator/kustomization.yaml
@@ -1,18 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+# Local base without console-plugin (OCPBUGS-59972 workaround)
+# Previously used: https://github.com/redhat-cop/gitops-catalog/gpu-operator-certified/operator/overlays/stable?ref=main
 resources:
-  - https://github.com/redhat-cop/gitops-catalog/gpu-operator-certified/operator/overlays/stable?ref=main
-
-patches:
-  - target:
-      kind: Subscription
-      name: gpu-operator-certified
-    path: patch-channel.yaml
-  # Rename OperatorGroup to match OSD/OpenShift naming convention
-  - target:
-      kind: OperatorGroup
-      name: gpu-operator-certified
-    patch: |-
-      - op: replace
-        path: /metadata/name
-        value: nvidia-gpu-operator-group
+  - base
