Add DSCInitialization with sync-wave before DSC

--- a/components/instances/rhoai-instance/base/kustomization.yaml
+++ b/components/instances/rhoai-instance/base/kustomization.yaml
@@ -5,6 +5,7 @@ commonAnnotations:
   argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 
 resources:
+  - dscinitialization.yaml
   - datasciencecluster.yaml
   - odh-dashboard-config.yaml
   - notebook-controller-culler-config-cm.yaml
