Add labels to HardwareProfile for dashboard visibility

--- a/components/instances/rhoai-instance/base/hardwareprofile-gpu.yaml
+++ b/components/instances/rhoai-instance/base/hardwareprofile-gpu.yaml
@@ -6,6 +6,9 @@ metadata:
     opendatahub.io/dashboard-feature-visibility: '[]'
     opendatahub.io/disabled: 'false'
     opendatahub.io/display-name: gpu-profile
+  labels:
+    app.kubernetes.io/part-of: hardwareprofile
+    app.opendatahub.io/hardwareprofile: "true"
   name: gpu-profile
   namespace: redhat-ods-applications
 spec:
