Add GPU taint to MachineSet and toleration to hardware profile
- MachineSet: Add nvidia.com/gpu:NoSchedule taint to GPU nodes
- HardwareProfile: Add toleration for nvidia.com/gpu taint (operator: Exists)

--- a/bootstrap/gpu-machineset/gpu-machineset-template.yaml
+++ b/bootstrap/gpu-machineset/gpu-machineset-template.yaml
@@ -22,6 +22,9 @@ spec:
       metadata:
         labels:
           node-role.kubernetes.io/gpu: ""
+      taints:
+        - key: nvidia.com/gpu
+          effect: NoSchedule
       providerSpec:
         value:
           apiVersion: machine.openshift.io/v1beta1
