--- a/components/argocd/apps/kustomization.yaml
+++ b/components/argocd/apps/kustomization.yaml
@@ -4,4 +4,4 @@ kind: Kustomization
 resources:
   - cluster-operators-appset.yaml
   - cluster-oper-instances-appset.yaml
-  - cluster-demos-appset.yaml
+  # demos appset is optional - use 'make demos' to deploy
