Add External Secrets support for pull-secret automation
External Secrets Integration:
- Add external-secrets-operator to components/operators/
- Add external-secrets-instance with ClusterSecretStore
- Add bootstrap/external-secrets for pull-secret ExternalSecret
- Update add-pull-secret.sh to detect ExternalSecret mode

Operator Fixes (match OpenShift UI defaults):
- connectivity-link: Move subscription to openshift-operators namespace
  (uses global OperatorGroup), move kuadrant-system namespace to instance
- kueue-operator: Add OperatorGroup, update channel to stable-v1.2
- jobset-operator: Add OperatorGroup for namespace
- cert-manager: Use cert-manager-operator-og name to match OpenShift default

Script Improvements:
- deploy-apps.sh: Use full API group application.argoproj.io
  to avoid conflict with applications.app.k8s.io CRD
- undeploy.sh: Add disable_applicationsets() to prevent app recreation
- sync-apps.sh: Add missing apps to SYNC_ORDER

Makefile:
- Add 'secrets' target for pull-secret setup
- Add 'bootstrap' target (gitops + secrets + deploy)
- Add 'infra' target (icsp + gpu + cpu)
- Update 'all' to use new targets

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,28 @@
 # .env is gitignored and will not be committed
 
 # =============================================================================
-# Quay.io credentials for RHOAI nightly images
+# Pull Secret Configuration (choose ONE option)
 # =============================================================================
+#
+# Option A: Manual credentials (set both QUAY_USER and QUAY_TOKEN)
+#   - Directly patches the cluster pull-secret with your credentials
+#   - Use if you have personal quay.io/rhoai access
+#
+# Option B: External Secrets (leave QUAY vars empty, ensure bootstrap repo access)
+#   - Uses External Secrets Operator to sync from AWS Secrets Manager
+#   - Requires git access to the private bootstrap repo
+#   - Override BOOTSTRAP_REPO/BOOTSTRAP_BRANCH if using a fork
+#
+# If both are set, Option A (manual) takes precedence.
+# =============================================================================
+
+# Option A: Manual quay.io credentials
 QUAY_USER=
 QUAY_TOKEN=
+
+# Option B: Bootstrap repo for External Secrets (defaults shown)
+# BOOTSTRAP_REPO=https://github.com/rh-aiservices-bu/rh-aiservices-bu-bootstrap.git
+# BOOTSTRAP_BRANCH=dev
 
 # =============================================================================
 # GPU MachineSet Configuration (optional - defaults shown)
