--- a/components/argocd/apps/cluster-oper-instances-appset.yaml
+++ b/components/argocd/apps/cluster-oper-instances-appset.yaml
@@ -47,6 +47,11 @@ spec:
               name: instance-nfs
               path: components/instances/nfs-instance/base
               namespace: openshift-gitops
+          - cluster: local
+            values:
+              name: instance-external-secrets
+              path: components/instances/external-secrets-instance
+              namespace: openshift-gitops
   template:
     metadata:
       name: "{{values.name}}"
