--- a/components/instances/connectivity-link-instance/base/kustomization.yaml
+++ b/components/instances/connectivity-link-instance/base/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - namespace.yaml
   - kuadrant.yaml
   - authorino.yaml
   - service-annotation.yaml
