--- a/components/operators/connectivity-link/subscription.yaml
+++ b/components/operators/connectivity-link/subscription.yaml
@@ -2,7 +2,7 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   name: rhcl-operator
-  namespace: kuadrant-system
+  namespace: openshift-operators
 spec:
   channel: stable
   installPlanApproval: Automatic
