--- a/components/operators/jobset-operator/operatorgroup.yaml
+++ b/components/operators/jobset-operator/operatorgroup.yaml
@@ -1,8 +1,9 @@
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
-  name: job-set
+  name: openshift-jobset-operator
   namespace: openshift-jobset-operator
 spec:
   targetNamespaces:
     - openshift-jobset-operator
+  upgradeStrategy: Default
