Move ClusterSecretStore to bootstrap and fix External Secrets instance
External Secrets integration now works in two modes:
1. GitOps: ArgoCD syncs external-secrets-instance (OperatorConfig)
2. Bootstrap: setup-secrets.sh applies instance before ArgoCD is ready

Changes:
- Move ClusterSecretStore to bootstrap/external-secrets/ (manual application)
- Add external-secrets-instance to components/instances (references gitops-catalog)
- Add instance-external-secrets to ApplicationSet and SYNC_ORDER
- Fix setup-secrets.sh to create namespace and apply instance
- Wait for webhook before applying ClusterSecretStore

--- a/bootstrap/external-secrets/kustomization.yaml
+++ b/bootstrap/external-secrets/kustomization.yaml
@@ -1,5 +1,16 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+# External Secrets ClusterSecretStore for AWS Secrets Manager
+# Only apply this if you have access to the bootstrap repo with AWS credentials
+#
+# Prerequisites:
+#   - external-secrets-operator installed (via GitOps)
+#   - awssm-secret created in external-secrets namespace (from bootstrap repo)
+#
+# Usage:
+#   oc apply -k bootstrap/external-secrets/
+
 resources:
+  - cluster-secret-store.yaml
   - pull-secret-external.yaml
