Switch to rh-aiservices-bu org, fix ExternalSecret merge policy

--- a/bootstrap/external-secrets/pull-secret-external.yaml
+++ b/bootstrap/external-secrets/pull-secret-external.yaml
@@ -11,7 +11,7 @@ spec:
     kind: ClusterSecretStore
   target:
     name: pull-secret
-    creationPolicy: Owner
+    creationPolicy: Merge
     template:
       type: kubernetes.io/dockerconfigjson
   data:
