--- a/components/configs/gateway/base/kustomization.yaml
+++ b/components/configs/gateway/base/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# Default: uses floating nightly tag
 resources:
-  - base
+  - gatewayclass.yaml
+  - gateway.yaml
