--- a/components/operators/rhoai-operator/kustomization.yaml
+++ b/components/operators/rhoai-operator/kustomization.yaml
@@ -1,19 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
-  - https://github.com/redhat-cop/gitops-catalog/openshift-ai/operator/base?ref=main
-  - catalogsource.yaml
 
-patches:
-  - target:
-      kind: Subscription
-      name: rhods-operator
-    path: patch-channel.yaml
-  # Rename OperatorGroup to match bu-nightly naming convention
-  - target:
-      kind: OperatorGroup
-      name: rhods-operator-group
-    patch: |-
-      - op: replace
-        path: /metadata/name
-        value: redhat-ods-operator
+# Default: uses floating nightly tag
+resources:
+  - base
